done except for audio on mobile display fix

--- a/thankyou.css
+++ b/thankyou.css
@@ -6,7 +6,25 @@ body {
 }
 
 .thankBox {
-    width: 85%;
-    height: 35%;
+    width: 50%;
+    height: 350px;
+    margin: auto;
     background-color: #845EC2;
+    text-align: center;
+    border-radius: 15px;
+}
+
+h1 {
+    padding-top: 40px;
+}
+
+a {
+    text-decoration: none;
+    transition: .2s ease all;
+    color: white;
+} 
+
+a:hover {
+    transition: .2s ease all;
+    opacity: .8;
 }
